# contact-form

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: controllers.py  request_body.py  run.py  settings.py  start-server.sh  urls.py  utils.py
frontend/: .env.development  package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/components/: ContactForms.vue  Header.vue
frontend/src/services/: api.js
static/: index.html
static/css/: chunk-vendors.ae51fcac.css
static/js/: app.ab0d9dd8.js  app.ab0d9dd8.js.map  chunk-vendors.bfd91c4d.js  chunk-vendors.bfd91c4d.js.map
